
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UIHook"
version = "0.1.0"
description = "UIHook: A versatile toolkit for interacting with and testing various GUI frameworks."
authors = [
    { name = "James David Clarke", email = "james@jamesdavidclarke.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "requests",
    "python-dotenv",
    "pydantic",
    "customtkinter",
    "hypercorn"
]

[project.urls]
homepage = "https://github.com/JamesClarke7283/UIHook"
repository = "https://github.com/JamesClarke7283/UIHook"




[tool.setuptools]
packages = ["src", "tests"]
package-dir = { "" = "src" }
include-package-data = true

[project.scripts]
uihook = "uihook.cli:main"
